--- a/content/practical/covid.html
+++ b/content/practical/covid.html
@@ -22,10 +22,10 @@ title: Covid policy
 
 <p>Relevant Belgian federal and Brussels regional government policy can be consulted using the links below:</p>
 <ul>
-  <li>https://www.belgium.be/en/highlights/coronavirus</li>
-  <li>https://www.belgium.be/en/news/2022/consultative_committee_face_mask_requirement_and_travel_restrictions_lifted_23_may_2022</li>
-  <li>https://www.info-coronavirus.be/en/faq/</li>
-  <li>https://coronavirus.brussels/en/home-2/</li>
-  <li>https://www.commissioner.brussels/en/updates-covid-19</li>
-  <li>https://www.commissioner.brussels/en/updates-covid-19/item/905-20-may-deactivation-of-the-corona-barometer-905</li>
+  <li><a href='https://www.belgium.be/en/highlights/coronavirus'>https://www.belgium.be/en/highlights/coronavirus</a></li>
+  <li><a href='https://www.belgium.be/en/news/2022/consultative_committee_face_mask_requirement_and_travel_restrictions_lifted_23_may_2022'>https://www.belgium.be/en/news/2022/consultative_committee_face_mask_requirement_and_travel_restrictions_lifted_23_may_2022</a></li>
+  <li><a href='https://www.info-coronavirus.be/en/faq/'>https://www.info-coronavirus.be/en/faq/</a></li>
+  <li><a href='https://coronavirus.brussels/en/home-2/'>https://coronavirus.brussels/en/home-2/</a></li>
+  <li><a href='https://www.commissioner.brussels/en/updates-covid-19'>https://www.commissioner.brussels/en/updates-covid-19</a></li>
+  <li><a href='https://www.commissioner.brussels/en/updates-covid-19/item/905-20-may-deactivation-of-the-corona-barometer-905'>https://www.commissioner.brussels/en/updates-covid-19/item/905-20-may-deactivation-of-the-corona-barometer-905</a></li>
 </ul>
