covid: mention no official beer event

--- a/content/practical/covid.html
+++ b/content/practical/covid.html
@@ -16,6 +16,7 @@ title: Covid policy
   <li>no mandatory covid-19 measures at FOSDEM 2023, barring last minute surprises</li>
   <li>slightly less stands and physical rooms than at FOSDEM 2020</li>
   <li>open/full rooms api</li>
+  <li>no official FOSDEM beer event</li>
   <li>encouraging ventilation of developer rooms</li>
   <li>FFP2 masks available on campus</li>
 </ul>
