Polish COVID-19 policy page a bit
Signed-off-by: Richard Hartmann <richih@richih.org>

--- a/content/practical/covid.html
+++ b/content/practical/covid.html
@@ -5,23 +5,23 @@ title: Covid policy
 # vim: set ts=2 sw=2 et ft=eruby fileencoding=utf-8:
 %>
 
-<p>The FOSDEM covid-19 policy is to:</p>
+<p>The FOSDEM COVID-19 policy is to:</p>
 <ul>
-    <li>implement all mandatory covid-19 measures</li>
-    <li>make it easy to follow government covid-19 recommendations</li>
+    <li>Implement all mandatory COVID-19 measures</li>
+    <li>Make it easy to follow government COVID-19 recommendations</li>
 </ul>
 
 <p>In practice, this tranlates to:</p>
 <ul>
-  <li>no mandatory covid-19 measures at FOSDEM 2023, barring last minute surprises</li>
-  <li>slightly less stands and physical rooms than at FOSDEM 2020</li>
-  <li>open/full rooms api</li>
-  <li>no official FOSDEM beer event</li>
-  <li>encouraging ventilation of developer rooms</li>
-  <li>FFP2 masks available on campus</li>
+  <li>No mandatory COVID-19 measures at FOSDEM 2023, barring last minute surprises</li>
+  <li>Slightly fewer stands and physical rooms than at FOSDEM 2020</li>
+  <li>Open/full rooms api</li>
+  <li>No official FOSDEM beer event</li>
+  <li>Encouraging ventilation of developer rooms</li>
+  <li>FFP2 masks available for free at infodesk (but please still bring your own)</li>
 </ul>
 
-<p>Relevant Belgian federal and Brussels regional government policy can be consulted using the links below:</p>
+<p>Relevant Belgian federal and Brussels regional government policy can be consulted at the links below:</p>
 <ul>
   <li><a href='https://www.belgium.be/en/highlights/coronavirus'>https://www.belgium.be/en/highlights/coronavirus</a></li>
   <li><a href='https://www.belgium.be/en/news/2022/consultative_committee_face_mask_requirement_and_travel_restrictions_lifted_23_may_2022'>https://www.belgium.be/en/news/2022/consultative_committee_face_mask_requirement_and_travel_restrictions_lifted_23_may_2022</a></li>
