Remove dead links on covid page
Note I did not review the content of the page, just removed the dead
links

--- a/content/practical/covid.html
+++ b/content/practical/covid.html
@@ -23,10 +23,7 @@ title: COVID-19 policy
 
 <p>Relevant Belgian federal and Brussels regional government policy can be consulted at the links below:</p>
 <ul>
-  <li><a href='https://www.belgium.be/en/highlights/coronavirus'>https://www.belgium.be/en/highlights/coronavirus</a></li>
   <li><a href='https://www.belgium.be/en/news/2022/consultative_committee_face_mask_requirement_and_travel_restrictions_lifted_23_may_2022'>https://www.belgium.be/en/news/2022/consultative_committee_face_mask_requirement_and_travel_restrictions_lifted_23_may_2022</a></li>
   <li><a href='https://www.info-coronavirus.be/en/faq/'>https://www.info-coronavirus.be/en/faq/</a></li>
-  <li><a href='https://coronavirus.brussels/en/home-2/'>https://coronavirus.brussels/en/home-2/</a></li>
-  <li><a href='https://www.commissioner.brussels/en/updates-covid-19'>https://www.commissioner.brussels/en/updates-covid-19</a></li>
-  <li><a href='https://www.commissioner.brussels/en/updates-covid-19/item/905-20-may-deactivation-of-the-corona-barometer-905'>https://www.commissioner.brussels/en/updates-covid-19/item/905-20-may-deactivation-of-the-corona-barometer-905</a></li>
+  <li><a href='https://coronavirus.brussels/en/'>https://coronavirus.brussels/en/</a></li>
 </ul>
