remove irrelevant things for 2024

--- a/content/practical/covid.html
+++ b/content/practical/covid.html
@@ -13,17 +13,14 @@ title: COVID-19 policy
 
 <p>In practice, this tranlates to:</p>
 <ul>
-  <li>No mandatory COVID-19 measures at FOSDEM 2024, barring last minute surprises</li>
-  <li>Slightly fewer stands and physical rooms than at FOSDEM 2020</li>
+  <li>No mandatory COVID-19 measures at FOSDEM 2024</li>
   <li>Open/full rooms api</li>
   <li>No official FOSDEM beer event</li>
   <li>Encouraging ventilation of developer rooms</li>
-  <li>FFP2 masks available for free at infodesk (but please still bring your own)</li>
 </ul>
 
 <p>Relevant Belgian federal and Brussels regional government policy can be consulted at the links below:</p>
 <ul>
-  <li><a href='https://www.belgium.be/en/news/2022/consultative_committee_face_mask_requirement_and_travel_restrictions_lifted_23_may_2022'>https://www.belgium.be/en/news/2022/consultative_committee_face_mask_requirement_and_travel_restrictions_lifted_23_may_2022</a></li>
   <li><a href='https://www.info-coronavirus.be/en/faq/'>https://www.info-coronavirus.be/en/faq/</a></li>
   <li><a href='https://coronavirus.brussels/en/'>https://coronavirus.brussels/en/</a></li>
 </ul>
