Fix broken links, update spelling

--- a/content/practical/covid.html
+++ b/content/practical/covid.html
@@ -11,16 +11,16 @@ title: COVID-19 policy
     <li>Make it easy to follow government COVID-19 recommendations</li>
 </ul>
 
-<p>In practice, this tranlates to:</p>
+<p>In practice, this translates to:</p>
 <ul>
   <li>No mandatory COVID-19 measures at FOSDEM 2025</li>
-  <li>Open/full rooms api</li>
+  <li>Open/full rooms API</li>
   <li>No official FOSDEM beer event</li>
   <li>Encouraging ventilation of developer rooms</li>
 </ul>
 
 <p>Relevant Belgian federal and Brussels regional government policy can be consulted at the links below:</p>
 <ul>
-  <li><a href='https://www.info-coronavirus.be/en/faq/'>https://www.info-coronavirus.be/en/faq/</a></li>
-  <li><a href='https://coronavirus.brussels/en/'>https://coronavirus.brussels/en/</a></li>
+  <li><a href='https://www.health.belgium.be/en/covid-19'>https://www.health.belgium.be/en/covid-19</a></li>
+  <li><a href='https://www.vivalis.brussels/fr/covid-19'>https://www.vivalis.brussels/fr/covid-19</a></li>
 </ul>
